--- a/index.html
+++ b/index.html
@@ -69,20 +69,84 @@
           <div class="green-line"></div>
           <h2>- メンバー一覧 -</h2>
           <ul class="cfx">
-            <li><img src="https://placehold.jp/400x400.png" alt="みわみわ"></li>
-            <li><img src="https://placehold.jp/400x400.png" alt="みわみわ"></li>
-            <li><img src="https://placehold.jp/400x400.png" alt="みわみわ"></li>
-            <li><img src="https://placehold.jp/400x400.png" alt="みわみわ"></li>
+            <li><img src="https://placehold.jp/400x400.png" alt="みわみわ">
+              <div class="mask">
+                <div class="caption">
+                  <h3>Leader</h3>
+                  <h4>- Presenter -</h4>
+                  <p>小串 泰斗</p>
+                </div>
+              </div>
+            </li>
+            <li><img src="https://placehold.jp/400x400.png" alt="みわみわ">
+              <div class="mask">
+                <div class="caption">
+                  <h3>Sub Leader</h3>
+                  <h4>- Engineer -</h4>
+                  <p>関 大智</p>
+                </div>
+              </div>
+            </li>
+            <li><img src="https://placehold.jp/400x400.png" alt="みわみわ">
+              <div class="mask">
+                <div class="caption">
+                  <h3>Member</h3>
+                  <h4>- Designer -</h4>
+                  <p>清水 勇太</p>
+                </div>
+              </div>
+            </li>
+            <li><img src="https://placehold.jp/400x400.png" alt="みわみわ">
+              <div class="mask">
+                <div class="caption">
+                  <h3>Member</h3>
+                  <h4>- Engineer -</h4>
+                  <p>三輪 俊太郎</p>
+                </div>
+              </div>
+            </li>
           </ul>
           <div class="page-num">-5-</div>
         </div>
         <div class="page page-seventh">
           <div class="green-line"></div>
           <ul class="cfx">
-            <li><img src="https://placehold.jp/400x400.png" alt="みわみわ"></li>
-            <li><img src="https://placehold.jp/400x400.png" alt="みわみわ"></li>
-            <li><img src="https://placehold.jp/400x400.png" alt="みわみわ"></li>
-            <li><img src="https://placehold.jp/400x400.png" alt="みわみわ"></li>
+            <li><img src="https://placehold.jp/400x400.png" alt="みわみわ">
+              <div class="mask">
+                <div class="caption">
+                  <h3>Member</h3>
+                  <h4>- sssss -</h4>
+                  <p>青木 龍也</p>
+                </div>
+              </div>
+            </li>
+            <li><img src="https://placehold.jp/400x400.png" alt="みわみわ">
+              <div class="mask">
+                <div class="caption">
+                  <h3>Member</h3>
+                  <h4>- sssss -</h4>
+                  <p>メンバー</p>
+                </div>
+              </div>
+            </li>
+            <li><img src="https://placehold.jp/400x400.png" alt="みわみわ">
+              <div class="mask">
+                <div class="caption">
+                  <h3>Member</h3>
+                  <h4>- sssss -</h4>
+                  <p>メンバー</p>
+                </div>
+              </div>
+            </li>
+            <li><img src="https://placehold.jp/400x400.png" alt="みわみわ">
+              <div class="mask">
+                <div class="caption">
+                  <h3>Member</h3>
+                  <h4>- sssss -</h4>
+                  <p>メンバー</p>
+                </div>
+              </div>
+            </li>
           </ul>
           <div class="page-num">-6-</div>
         </div>
@@ -112,7 +176,7 @@
           <div class="qr-area">
             <div class="text-area">
               <h3>WEB開発学科4年 H424</h3>
-              <p>QRコード読み込みでSPサイトへ</p>
+              <p>QRコード読み込みで特設SPサイトへ</p>
             </div>
             <div class="image-area"><img src="./img/qr.png" alt="QRコード"></div>
           </div>
