--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
           <h2>- 目次 -</h2>
           <ul>
             <li><span class="red">作品について</span>・・・ P2 - 4</li>
-            <li><span class="green">メンバー一覧</span>・・・ P5 - 6</li>
-            <li><span class="blue">使用した技術</span>・・・ P7 - 8</li>
+            <li><span class="green">メンバー一覧</span>・・・ P5 - 8</li>
+            <li><span class="blue">使用した技術</span>・・・ P9 - 10</li>
           </ul>
           <div class="page-num">-1-</div>
         </div>
@@ -68,41 +68,33 @@
         <div class="page page-sixth">
           <div class="green-line"></div>
           <h2>- メンバー一覧 -</h2>
-          <ul class="cfx">
-            <li><img src="https://placehold.jp/400x400.png" alt="みわみわ">
-              <div class="mask">
-                <div class="caption">
-                  <h3>Leader</h3>
-                  <h4>- Presenter -</h4>
-                  <p>小串 泰斗</p>
+          <ul>
+            <li>
+              <div class="left"><img src="./img/member/ogushi.jpg" alt="小串">
+                <div class="mask">
+                  <div class="caption">
+                    <h3>Leader</h3>
+                    <h4>- Presenter -</h4>
+                    <p>小串 泰斗</p>
+                  </div>
                 </div>
               </div>
-            </li>
-            <li><img src="https://placehold.jp/400x400.png" alt="みわみわ">
-              <div class="mask">
-                <div class="caption">
-                  <h3>Sub Leader</h3>
-                  <h4>- Engineer -</h4>
-                  <p>関 大智</p>
-                </div>
+              <div class="right">
+                <p class="text">リーダーとして、みんなをまとめていくことが大変でした。</p>
               </div>
             </li>
-            <li><img src="https://placehold.jp/400x400.png" alt="みわみわ">
-              <div class="mask">
-                <div class="caption">
-                  <h3>Member</h3>
-                  <h4>- Designer -</h4>
-                  <p>清水 勇太</p>
+            <li>
+              <div class="left"><img src="./img/member/seki.jpg" alt="関">
+                <div class="mask">
+                  <div class="caption">
+                    <h3>Sub Leader</h3>
+                    <h4>- Engineer -</h4>
+                    <p>関 大智</p>
+                  </div>
                 </div>
               </div>
-            </li>
-            <li><img src="https://placehold.jp/400x400.png" alt="みわみわ">
-              <div class="mask">
-                <div class="caption">
-                  <h3>Member</h3>
-                  <h4>- Engineer -</h4>
-                  <p>三輪 俊太郎</p>
-                </div>
+              <div class="right">
+                <p class="text">初めて使用する技術が多く大変だったが、楽しみながら製作することができた。</p>
               </div>
             </li>
           </ul>
@@ -110,66 +102,130 @@
         </div>
         <div class="page page-seventh">
           <div class="green-line"></div>
-          <ul class="cfx">
-            <li><img src="https://placehold.jp/400x400.png" alt="みわみわ">
-              <div class="mask">
-                <div class="caption">
-                  <h3>Member</h3>
-                  <h4>- sssss -</h4>
-                  <p>青木 龍也</p>
+          <ul>
+            <li>
+              <div class="left"><img src="./img/member/shimizu.jpg" alt="清水">
+                <div class="mask">
+                  <div class="caption">
+                    <h3>Member</h3>
+                    <h4>- Designer -</h4>
+                    <p>清水 勇太</p>
+                  </div>
                 </div>
               </div>
-            </li>
-            <li><img src="https://placehold.jp/400x400.png" alt="みわみわ">
-              <div class="mask">
-                <div class="caption">
-                  <h3>Member</h3>
-                  <h4>- sssss -</h4>
-                  <p>メンバー</p>
-                </div>
+              <div class="right">
+                <p class="text">ああああああ</p>
               </div>
             </li>
-            <li><img src="https://placehold.jp/400x400.png" alt="みわみわ">
-              <div class="mask">
-                <div class="caption">
-                  <h3>Member</h3>
-                  <h4>- sssss -</h4>
-                  <p>メンバー</p>
+            <li>
+              <div class="left"><img src="./img/member/miwa.jpg" alt="三輪">
+                <div class="mask">
+                  <div class="caption">
+                    <h3>Member</h3>
+                    <h4>- Engineer -</h4>
+                    <p>三輪 俊太郎</p>
+                  </div>
                 </div>
               </div>
-            </li>
-            <li><img src="https://placehold.jp/400x400.png" alt="みわみわ">
-              <div class="mask">
-                <div class="caption">
-                  <h3>Member</h3>
-                  <h4>- sssss -</h4>
-                  <p>メンバー</p>
-                </div>
+              <div class="right">
+                <p class="text">今回の未来創造展は初めてのことがたくさんあったので、とても刺激的でした。</p>
               </div>
             </li>
           </ul>
           <div class="page-num">-6-</div>
         </div>
+        <div class="page page-seventh">
+          <div class="green-line"></div>
+          <ul>
+            <li>
+              <div class="left"><img src="./img/member/aoki.jpg" alt="青木">
+                <div class="mask">
+                  <div class="caption">
+                    <h3>Member</h3>
+                    <h4>- Project Members -</h4>
+                    <p>青木 龍矢</p>
+                  </div>
+                </div>
+              </div>
+              <div class="right">
+                <p class="text">ああああああ</p>
+              </div>
+            </li>
+            <li>
+              <div class="left"><img src="./img/member/noimage.jpg" alt="メンバー">
+                <div class="mask">
+                  <div class="caption">
+                    <h3>Member</h3>
+                    <h4>- Project Members -</h4>
+                    <p>メンバー</p>
+                  </div>
+                </div>
+              </div>
+              <div class="right">
+                <p class="text">あああああああ</p>
+              </div>
+            </li>
+          </ul>
+          <div class="page-num">-7-</div>
+        </div>
+        <div class="page page-seventh">
+          <div class="green-line"></div>
+          <ul>
+            <li>
+              <div class="left"><img src="./img/member/noimage.jpg" alt="メンバー">
+                <div class="mask">
+                  <div class="caption">
+                    <h3>Member</h3>
+                    <h4>- Project Members -</h4>
+                    <p>メンバー</p>
+                  </div>
+                </div>
+              </div>
+              <div class="right">
+                <p class="text">ああああああ</p>
+              </div>
+            </li>
+            <li>
+              <div class="left"><img src="./img/member/noimage.jpg" alt="メンバー">
+                <div class="mask">
+                  <div class="caption">
+                    <h3>Member</h3>
+                    <h4>- Project Members -</h4>
+                    <p>メンバー</p>
+                  </div>
+                </div>
+              </div>
+              <div class="right">
+                <p class="text">ああああああ</p>
+              </div>
+            </li>
+          </ul>
+          <div class="page-num">-8-</div>
+        </div>
         <div class="page page-eighth">
           <div class="blue-line"></div>
           <h2>- 使用した技術 -</h2>
-          <h3>◇<span class="blue">コンパイル言語</span></h3>
+          <h3>◇<span class="blue">言語</span></h3>
           <p>◯ pug</p>
           <p>◯ stylus</p>
-          <h3>◇<span class="blue">web-api</span></h3>
-          <p>◯ pug</p>
-          <p>◯ stylus</p>
-          <div class="page-num">-7-</div>
+          <p>◯ Node.js</p>
+          <p>◯ React.js</p>
+          <p>◯ Node.js</p>
+          <p>◯ Monaca</p>
+          <div class="page-num">-9-</div>
         </div>
         <div class="page page-ninth">
           <div class="blue-line"></div>
-          <h3 class="first">◇<span class="blue">バックエンド</span></h3>
-          <p>◯ pug</p>
-          <p>◯ stylus</p>
+          <h3 class="first">◇<span class="blue">web-api</span></h3>
+          <p>◯ open-weather</p>
+          <h3>◇<span class="blue">バックエンド</span></h3>
+          <p>◯ php</p>
+          <p>◯ mysql</p>
           <h3>◇<span class="blue">プラグイン</span></h3>
-          <p>◯ pug</p>
-          <p>◯ stylus</p>
-          <div class="page-num">-8-</div>
+          <p>◯ box2d</p>
+          <p>◯ weppack</p>
+          <p>◯ jQuery</p>
+          <div class="page-num">-10-</div>
         </div>
         <div class="page page-end">
           <h2>THE END</h2>
