テキスト完成

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                 </div>
               </div>
               <div class="right">
-                <p class="text">ああああああ</p>
+                <p class="text">賞は取れなかったけどいい経験、思い出になった。</p>
               </div>
             </li>
             <li>
@@ -148,7 +148,7 @@
                 </div>
               </div>
               <div class="right">
-                <p class="text">ああああああ</p>
+                <p class="text">色々楽しかったです。ありがとうございました</p>
               </div>
             </li>
             <li>
@@ -162,7 +162,7 @@
                 </div>
               </div>
               <div class="right">
-                <p class="text">あああああああ</p>
+                <p class="text">大変でしたが無事終えれてよかったです。</p>
               </div>
             </li>
           </ul>
@@ -182,7 +182,7 @@
                 </div>
               </div>
               <div class="right">
-                <p class="text">ああああああ</p>
+                <p class="text">ブースの机がキレイに仕上がったので、製作は満足できました。</p>
               </div>
             </li>
             <li>
@@ -196,7 +196,7 @@
                 </div>
               </div>
               <div class="right">
-                <p class="text">ああああああ</p>
+                <p class="text">机を彫るのが大変でした。</p>
               </div>
             </li>
           </ul>
